--- a/src/Login/Signup Components/LoginSignup.css
+++ b/src/Login/Signup Components/LoginSignup.css
@@ -1,7 +1,8 @@
 .container {
     display: flex;
     flex-direction: column;
-    margin: 25%;
+    margin: auto;
+    margin-top: auto;
     background: #ffe7b4;
     padding: 30px;
     width: 500px;
