--- a/frontend/src/BiteBuddies/BiteBuddiesPage.css
+++ b/frontend/src/BiteBuddies/BiteBuddiesPage.css
@@ -39,3 +39,19 @@
 .header{
     font-size: 20px;
 }
+
+.search-bar {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 10px 0px;
+    margin: 10px 0px;
+}
+
+.search-bar input {
+    max-width: fit-content;
+}
+
+.search-bar button {
+    border-radius: 5px;
+}
