--- a/frontend/src/FoodSearch/components/SearchResultsList.css
+++ b/frontend/src/FoodSearch/components/SearchResultsList.css
@@ -1,6 +1,6 @@
 .search-results-wrapper {
     margin-top: 2rem;
-    background-color: white;
+    background-color: #fcfaf1;
     width: 100%;
     height: 100%;
     border-radius: 10px;
