--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -5,18 +5,6 @@
   text-align: center;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
 
 @keyframes logo-spin {
   from {
@@ -39,4 +27,11 @@
 
 .read-the-docs {
   color: #888;
+}
+
+
+.container {
+  background-color: transparent;
+  width: 100%;
+  height: 100%;
 }
