--- a/frontend/src/Favourites/Popup.css
+++ b/frontend/src/Favourites/Popup.css
@@ -4,7 +4,7 @@
     left: 0;
     width: 100%;
     height: 100vh;
-    background-color: rgba(10, 10, 10, 0.1);
+    background-color: #582c1b6e;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -13,18 +13,26 @@
 
 .popup-inner {
     position: relative;
-    padding: 32px;
+    padding: 50px;
     width: 100%;
     max-width: 640px;
-    background-color: #FFE7B4;
-    border-style: solid;
+    background-color: #ffe7b3;
+    border: none;
     z-index: 1000;
+    justify-content: center;
+    align-items: center;
+    border-radius: 20px;
+    box-shadow: 0 4px 8px #582c1b67;
 }
 
 .popup-inner .close-btn {
     position: absolute;
-    top: 10px;
-    right: 10px;
-    z-index: 1000;
-    background-color: blanchedalmond;
+    top: 15px;
+    right: 15px;
+    z-index: 10000;
+    width: 35px;
+    height: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
