--- a/frontend/src/FoodSearch/SearchPage.css
+++ b/frontend/src/FoodSearch/SearchPage.css
@@ -1,5 +1,4 @@
 .App {
-  background-color: #eee;
   height: 100vh;
   width: 100vw;
   margin: auto;
@@ -12,8 +11,7 @@
   padding-top: 10vh;
   font-size: 50px;
   align-items: center;
-  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-  font-variant: small-caps;
+  font-weight: bold;
   color: orange;
 }
 
