--- a/frontend/src/FoodSearch/components/SearchAutofill.css
+++ b/frontend/src/FoodSearch/components/SearchAutofill.css
@@ -1,6 +1,6 @@
 .autofill-list {
     width: 100%;
-    background-color: white;
+    background-color: #fcfaf1;
     display:flex;
     flex-direction: column;
     border-radius: 10px;
