--- a/frontend/src/FoodSearch/components/SearchBar.css
+++ b/frontend/src/FoodSearch/components/SearchBar.css
@@ -1,5 +1,5 @@
 .input-wrapper {
-    background-color: white;
+    background-color: #fcfaf1;
     height: 50px;
     width: 100%;
     border-radius: 10px;
@@ -9,29 +9,36 @@
     padding-bottom: 10px;
     box-shadow: 0px 0px 8px #ddd;
     display: flex;
+    flex-direction: row;
     align-items: center;
+    position: relative;
 }
 
 .input {
-    background-color: transparent;
     border: none;
     height: 100%;
     font-size: 1.25rem;
     width: calc(100% - 40px);
     margin-left: 5px;
     padding:15px;
-    color:black;
+    color:#582c1b;
 }
 
 .input:focus {
     outline:none;
+    background-color: transparent;
 }
 
 .search-button {
     position: absolute;
-    right: 15px;
+    bottom: 0px;
+    right: 0px;
     border-color: transparent;
     border: none;
+    background-color: transparent;
+}
+
+.search-button:hover {
     background-color: transparent;
 }
 
