--- a/frontend/src/WhatsNew/WhatsNewPage.css
+++ b/frontend/src/WhatsNew/WhatsNewPage.css
@@ -9,7 +9,7 @@
     max-height: 650px;
 }
 
-.ResultRestaurantKey {
+.whatsnew-restaurant {
     width: 700px;
     height: 100px;
     padding: 10px 20px;
@@ -24,11 +24,11 @@
     overflow: hidden;
 }
 
-.ResultRestaurantKey:hover {
+.whatsnew-restaurant:hover {
     background-color: orange;
 }
 
-.restImage {
+.whatsnew-restImage {
     position:absolute;
     height: 85%;
     left: 1%;
@@ -37,32 +37,35 @@
     margin: 10px;
 }
 
-.row1 {
+.whatsnew-row1 {
+    background-color: transparent;
     display: flex;
     flex-direction: column; /* Stack items vertically */
     align-items: flex-start; /* Align items to the left */
-    width: 70%; /* Adjust width as needed to fit within the container */
+    width: 65%; /* Adjust width as needed to fit within the container */
     position: relative;
     overflow: hidden; /* Hide overflow content */
-    left: 270px;
+    left: 30%;
+    margin-right: 5px;
+    justify-content: center;
     font-weight:500;
 }
 
-.restName {
+.whatsnew-restName {
     font-size: 30px;
     font-weight: bold;
     color: #582c1b;
     text-align: left;
 }
 
-.info-row {
+.whatsnew-info-row {
     display: flex;
     align-items: flex-start;
     width: 100%; /* Full width of row1 */
     justify-content: space-between; /* Distribute space between items */
 }
 
-.rating {
+.whatsnew-rating {
     display: flex;
     flex-direction: row;
     align-items: center;
@@ -70,22 +73,7 @@
     margin-right: 5px;
 }
 
-.cuisine, .priceRange, .rating, .location{
+.whatsnew-cuisine, .whatsnew-priceRange, .whatsnew-rating, .whatsnew-location{
     color: #8b5c49;
     margin: 5px;
-}
-
-
-@media (max-width: 768px) {
-    .restImage {
-        width: 30%; /* Adjust for smaller screens */
-    }
-    
-    .row1 {
-        width: 100%;
-    }
-    
-    .info-row {
-        flex-direction: column; /* Stack vertically on small screens */
-    }
 }
