--- a/frontend/src/FoodSearch/components/SearchBar.css
+++ b/frontend/src/FoodSearch/components/SearchBar.css
@@ -18,7 +18,7 @@
     border: none;
     height: 100%;
     font-size: 1.25rem;
-    width: calc(100% - 40px);
+    width:100%;
     margin-left: 5px;
     padding:15px;
     color:#582c1b;
