--- a/frontend/src/Login/Signup Components/LoginSignup.css
+++ b/frontend/src/Login/Signup Components/LoginSignup.css
@@ -1,9 +1,9 @@
-.container {
+.login-container {
     display: flex;
     flex-direction: column;
     margin: auto;
     margin-top: auto;
-    background: #ffe7b3;
+    background: #ffda8b;
     padding: 30px;
     width: 500px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -45,7 +45,7 @@
     gap: 25px;
 }
 
-.input {
+.login-input {
     display: flex;
     align-items: center;
     width: 100%;
@@ -56,13 +56,13 @@
     padding: 0 15px;
 }
 
-.input i {
+.login-input i {
     color: orange;
     font-size: 30px;
     margin-right: 15px;
 }
 
-.input input {
+.login-input input {
     flex: 1;
     height: 100%;
     background: transparent;
