--- a/frontend/src/Notification/Notification.css
+++ b/frontend/src/Notification/Notification.css
@@ -13,27 +13,14 @@
     border: 1px solid orangered;
 }
 
-.container {
-    background-color: transparent;
+.overall-notif-container {
+    background-color: black;
     box-shadow: none;
     display: flex;
     flex-direction: column;
     position: relative;
-    width: 100%; /* Adjust percentage as needed */
-    margin: auto; /* Center the container horizontally */
-}
-
-.back-button {
-    position: fixed;
-    left: 90px;
-    top: 20px;
-    background-color: transparent;
-}
-
-.back-button:hover {
-    background-color: transparent;
-    color: orange;
-    transform: scale(1.5);
+    width: 90%;
+    margin: auto;
 }
 
 
@@ -43,7 +30,8 @@ h1 {
 }
 
 h5 {
-    margin-bottom: 20px;
+    margin: 20px;
+    margin-bottom: 30px;
 }
 
 .button-container {
@@ -52,7 +40,8 @@ h5 {
     display: flex;
     flex-direction: row;
     gap: 10px;
-    width: 100%;
+    width: 80%;
+    margin: auto;
     margin-bottom: 10px;
 }
 
@@ -68,6 +57,11 @@ h5 {
 .notif-btn {
     width: 100%;
     margin: 3px;
+}
+
+.notif-btn:disabled {
+    background-color: #f0e6cc;
+    color:gray;
 }
 
 .card {
