--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -71,7 +71,7 @@ button:focus-visible {
 @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
-    background-color: #f4efe6;
+    background-color: #ffefd2;
   }
   a:hover {
     color: #747bff;
